# cfc-ptrace

./: .gitignore  Cargo.toml  Justfile  README.md  filesystem_client.ts  fs.ts  fs_test.ts  go.mod  main.go  main_test.ts
fs/another/fake/: file.txt
fs/fake/: test.txt
src/: main.rs  websocket_fs.rs  websocket_fs_tests.rs
