[package]
name = "cfc-ptrace"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.30", features = ["process", "ptrace", "signal"] }
libc = "0.2"
tempfile = "3.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
